@@ -1,4 +1,5 @@
 0.11
+ - Improve Struct documentation.
 
 0.10 2023-04-23T10:51:08+02:00
  - Add references to MediainfoStatement.
